# Chord-Transcription

./: .gitignore  Chord_Transcription.ipynb  README.ja.md  README.md  pyproject.toml  requirements.txt
configs/: train.yaml  train_large.yaml  train_small.yaml
data/: music_structures.json  quality.json  quality_freq_count.json
scripts/: collect_section_labels.py  visualize_music_structure.py  visualize_segment_transcription.py
src/: evaluate.py  export_public_checkpoint.py  inference.py  train_crf.py  train_music_structure.py  train_segment_transcription.py  train_transcription.py  utils.py  visualize_repeat_ssm.py
src/chord_transcription/: __init__.py  hmm.py  hub.py  inference.py  metrics.py
src/chord_transcription/models/: __init__.py  cqt.py  crf_model.py  factory.py  semi_crf.py  spec_augment.py  transcription_model.py  transformer.py
src/chord_transcription/transcribers/: __init__.py  decoder.py  predictor.py  types.py
src/data/: __init__.py  audio_augmentation.py  beat_dataset.py  dataset.py  label_shifter.py  processing.py
src/models/: crf_wrapper.py  segment_model.py  spec_augment.py  transcription_model.py  transformer.py
src/preprocess/: count_quality_freq.py  make_pairs_csv.py  normalize_chords.py  pack_stems.py  pitch_shift_augment.py  precompute_beats.py  resample_only.py  separate_and_resample.py
src/training/: augmentations.py  crf_trainer.py  losses.py  trainer.py  visualization.py
src/transcribers/: base_transcriber.py
