[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 120

[project]
name = "chord-transcription"
version = "0.0.3"
description = "chord transcription model"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "einops>=0.7",
    "huggingface-hub>=0.23",
    "numba>=0.59",
    "numpy>=1.24",
    "pytorch-crf>=0.7",
    "scipy>=1.10",
    "soundfile>=0.12",
    "torch>=2.2",
    "torchaudio>=2.2",
    "dlchordx>=1.0.5",
    "torchcodec",
]

[project.optional-dependencies]
romanize = [
    "chord-romanizer",
]
train = [
    "audiomentations",
    "pyyaml>=6.0",
    "tensorboard>=2.16",
    "tqdm>=4.66",
]
viz = [
    "matplotlib>=3.8",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["chord_transcription*"]
